--- a/app.css
+++ b/app.css
@@ -8,6 +8,41 @@
 h1 {
   font-size: 40px;
 }
+.option-div {
+  background-color: red;
+  padding: 15px;
+  width: 150px;
+  margin-top: 15px;
+}
+
+.option-div:hover {
+  background-color: #fff;
+  color: red;
+  border: 1px solid red;
+}
+.options {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  width: 100%;
+}
+.options-set {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.options-set input {
+  min-width: 0%;
+  margin-right: 5px;
+}
+
+.options-set span {
+  color: red;
+}
+
 .about-p {
   width: 355px;
 }
@@ -31,7 +66,7 @@ input {
   font-size: 18px;
   margin-top: 5px;
 }
-label {
+.input-set label {
   font-size: 18px;
 }
 button {
